package fr.eiffelbikecorp.bikeapi.domain;

public enum BikeStatus {
    AVAILABLE, RENTED, MAINTENANCE;
}
